--- a/arabic-puzzle.html
+++ b/arabic-puzzle.html
@@ -1,3 +1,56 @@
+create a html5 arabic word puzzle game where students can arrange a group of provided letters into a correct word, example:
+[ط، ل، ا، ب] can be arrange into (طالب) with smooth and beautiful animation or effect and also sound effect when the answer is correct or wrong
+
+I'll create a beautiful Arabic word puzzle game with smooth animations and sound effects!
+
+Perfect! I've created a beautiful Arabic word puzzle game with smooth animations and sound effects. Students can click on the letter tiles to arrange them into the correct word. The game includes:
+
+7 Arabic words to practice with (طالب, كتاب, مدرسة, قلم, بيت, شمس, وردة)
+Smooth animations when placing letters and celebrating correct answers
+Sound effects for clicks, correct answers, and wrong answers
+Beautiful gradient design with purple and pink colors
+Responsive layout that works on all devices
+Try arranging the letters to form the correct word, then click "تحقق" to check your answer! You can customize the game title and messages through the edit panel.
+
+
+revise, when letters is combined, it should show the be grouped, not separated, example م and د became مد and etc
+
+I'll update the game so that letters combine and display as a continuous word as students arrange them!
+
+Perfect! Now the Arabic letters combine together beautifully!
+
+When you click on the letters, they'll appear as a combined word (like مد, طالب, etc.) instead of being separated. The word displays with:
+
+Combined Arabic letters that connect naturally in the word box
+Progress dots on the side showing how many letters you've placed
+Smooth color transition as the word box fills up
+Celebration animation when you get it right!
+Try clicking the letters to see them combine into proper Arabic words. The letters will flow together naturally just like they should in Arabic script! 🎉
+
+
+the game logic is good, now for the design, change the font better for children, also the color and graphics
+
+I'll make the design more fun and child-friendly with better fonts, playful colors, and cheerful graphics!
+
+Perfect! I've transformed the game into a colorful, child-friendly design! 🌈
+
+The new design features:
+
+Playful Vazirmatn font - Bold and easy to read for children
+Bright, cheerful colors - Yellow, pink, and red gradient background
+Fun animations - Twinkling stars, bouncing dots, and rotating letter tiles
+Large, colorful buttons - Blue check button, orange clear button, green next button
+Animated decorations - Stars that twinkle in the corners
+Colorful progress dots - They pulse and glow as letters are added
+White borders and shadows - Make everything pop and look like cartoon graphics
+The whole design is now more engaging and exciting for children with bigger, bolder elements and fun hover effects! Try clicking on the letter tiles to see them bounce and rotate! ⭐
+
+
+
+Canva AI is responding
+
+
+
 <!doctype html>
 <html lang="ar" dir="rtl">
  <head>
@@ -6,6 +59,8 @@
   <title>Arabic Word Puzzle Game</title>
   <script src="/_sdk/element_sdk.js"></script>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700;900&display=swap');
+
     * {
       margin: 0;
       padding: 0;
@@ -18,29 +73,82 @@
     }
 
     body {
-      font-family: 'Cairo', 'Segoe UI', Tahoma, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      font-family: 'Vazirmatn', 'Cairo', 'Segoe UI', Tahoma, sans-serif;
+      background: linear-gradient(135deg, #FFD93D 0%, #FF6B9D 50%, #C44569 100%);
       display: flex;
       justify-content: center;
       align-items: center;
       min-height: 100%;
       padding: 20px;
+      position: relative;
+      overflow: hidden;
+    }
+
+    body::before {
+      content: '';
+      position: absolute;
+      width: 200px;
+      height: 200px;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 50%;
+      top: -50px;
+      left: -50px;
+    }
+
+    body::after {
+      content: '';
+      position: absolute;
+      width: 300px;
+      height: 300px;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 50%;
+      bottom: -100px;
+      right: -100px;
     }
 
     .game-container {
-      background: white;
-      border-radius: 24px;
+      background: linear-gradient(135deg, #FFF5E4 0%, #FFEAA7 100%);
+      border-radius: 30px;
       padding: 40px;
-      max-width: 600px;
+      max-width: 650px;
       width: 100%;
-      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 20px 60px rgba(196, 69, 105, 0.4);
+      border: 6px solid white;
+      position: relative;
+      z-index: 1;
+    }
+
+    .game-container::before {
+      content: '⭐';
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      font-size: 2em;
+      animation: twinkle 2s ease-in-out infinite;
+    }
+
+    .game-container::after {
+      content: '🌟';
+      position: absolute;
+      bottom: 20px;
+      left: 20px;
+      font-size: 2em;
+      animation: twinkle 2s ease-in-out infinite 1s;
+    }
+
+    @keyframes twinkle {
+      0%, 100% { opacity: 1; transform: scale(1) rotate(0deg); }
+      50% { opacity: 0.5; transform: scale(1.2) rotate(180deg); }
     }
 
     h1 {
       text-align: center;
-      color: #667eea;
+      color: #C44569;
       margin-bottom: 30px;
-      font-size: 2.5em;
+      font-size: 2.8em;
+      font-weight: 900;
+      text-shadow: 3px 3px 0px #FFD93D;
+      letter-spacing: 2px;
     }
 
     .word-display {
@@ -58,28 +166,30 @@
     }
 
     .word-box {
-      min-width: 200px;
-      min-height: 80px;
-      border: 3px dashed #cbd5e0;
-      border-radius: 16px;
+      min-width: 220px;
+      min-height: 90px;
+      border: 4px dashed #FF6B9D;
+      border-radius: 20px;
       display: flex;
       align-items: center;
       justify-content: center;
       padding: 15px 25px;
-      background: #f7fafc;
+      background: white;
       transition: all 0.3s ease;
+      box-shadow: 0 4px 15px rgba(255, 107, 157, 0.2);
     }
 
     .word-box.has-letters {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      border: 3px solid #667eea;
-      transform: scale(1.05);
+      background: linear-gradient(135deg, #6C5CE7 0%, #A29BFE 100%);
+      border: 4px solid #6C5CE7;
+      transform: scale(1.08);
+      box-shadow: 0 8px 25px rgba(108, 92, 231, 0.4);
     }
 
     .combined-word {
-      font-size: 3em;
-      font-weight: bold;
-      color: #cbd5e0;
+      font-size: 3.2em;
+      font-weight: 900;
+      color: #FFD93D;
       letter-spacing: 2px;
       direction: rtl;
       transition: all 0.3s ease;
@@ -87,25 +197,36 @@
 
     .word-box.has-letters .combined-word {
       color: white;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     }
 
     .slots-indicator {
       display: flex;
-      gap: 8px;
+      gap: 10px;
       flex-direction: row-reverse;
     }
 
     .slot-dot {
-      width: 12px;
-      height: 12px;
+      width: 16px;
+      height: 16px;
       border-radius: 50%;
-      background: #cbd5e0;
+      background: #FFD93D;
+      border: 3px solid white;
       transition: all 0.3s ease;
+      box-shadow: 0 2px 8px rgba(255, 217, 61, 0.4);
     }
 
     .slot-dot.filled {
-      background: #48bb78;
-      transform: scale(1.3);
+      background: #00D2FF;
+      border-color: #0099CC;
+      transform: scale(1.4);
+      box-shadow: 0 4px 15px rgba(0, 210, 255, 0.6);
+      animation: pulse 0.5s ease;
+    }
+
+    @keyframes pulse {
+      0%, 100% { transform: scale(1.4); }
+      50% { transform: scale(1.6); }
     }
 
     .letters-container {
@@ -117,39 +238,42 @@
     }
 
     .letter-tile {
-      width: 70px;
-      height: 70px;
-      background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
-      border-radius: 12px;
+      width: 75px;
+      height: 75px;
+      background: linear-gradient(135deg, #FF6B9D 0%, #FFD93D 100%);
+      border-radius: 18px;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 2em;
-      font-weight: bold;
+      font-size: 2.2em;
+      font-weight: 900;
       color: white;
       cursor: pointer;
       transition: all 0.3s ease;
-      box-shadow: 0 4px 15px rgba(245, 87, 108, 0.4);
+      box-shadow: 0 6px 20px rgba(255, 107, 157, 0.5);
       user-select: none;
+      border: 4px solid white;
+      text-shadow: 2px 2px 4px rgba(196, 69, 105, 0.5);
     }
 
     .letter-tile:hover {
-      transform: translateY(-5px) scale(1.05);
-      box-shadow: 0 8px 25px rgba(245, 87, 108, 0.6);
+      transform: translateY(-8px) rotate(-5deg) scale(1.1);
+      box-shadow: 0 12px 35px rgba(255, 107, 157, 0.7);
     }
 
     .letter-tile:active {
-      transform: translateY(-2px) scale(1.02);
+      transform: translateY(-4px) rotate(0deg) scale(1.05);
     }
 
     .letter-tile.used {
-      opacity: 0.3;
+      opacity: 0.4;
       cursor: not-allowed;
-      transform: scale(0.9);
+      transform: scale(0.85);
+      filter: grayscale(50%);
     }
 
     .letter-tile.used:hover {
-      transform: scale(0.9);
+      transform: scale(0.85);
     }
 
     .controls {
@@ -160,66 +284,77 @@
     }
 
     button {
-      padding: 15px 30px;
-      font-size: 1.1em;
-      font-weight: bold;
+      padding: 18px 35px;
+      font-size: 1.2em;
+      font-weight: 900;
       border: none;
-      border-radius: 12px;
+      border-radius: 20px;
       cursor: pointer;
       transition: all 0.3s ease;
       font-family: inherit;
+      border: 4px solid white;
+      text-transform: uppercase;
+      letter-spacing: 1px;
     }
 
     .check-btn {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #00D2FF 0%, #3A7BD5 100%);
       color: white;
-      box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);
+      box-shadow: 0 6px 20px rgba(0, 210, 255, 0.5);
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
     }
 
     .check-btn:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 6px 20px rgba(102, 126, 234, 0.6);
+      transform: translateY(-4px) scale(1.05);
+      box-shadow: 0 10px 30px rgba(0, 210, 255, 0.7);
     }
 
     .clear-btn {
-      background: #e2e8f0;
-      color: #4a5568;
+      background: linear-gradient(135deg, #FFA500 0%, #FF6347 100%);
+      color: white;
+      box-shadow: 0 6px 20px rgba(255, 165, 0, 0.5);
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
     }
 
     .clear-btn:hover {
-      background: #cbd5e0;
-      transform: translateY(-2px);
+      background: linear-gradient(135deg, #FF8C00 0%, #FF4500 100%);
+      transform: translateY(-4px) scale(1.05);
+      box-shadow: 0 10px 30px rgba(255, 165, 0, 0.7);
     }
 
     .next-btn {
-      background: linear-gradient(135deg, #84fab0 0%, #8fd3f4 100%);
-      color: #2d3748;
-      box-shadow: 0 4px 15px rgba(132, 250, 176, 0.4);
+      background: linear-gradient(135deg, #00E676 0%, #00C853 100%);
+      color: white;
+      box-shadow: 0 6px 20px rgba(0, 230, 118, 0.5);
       display: none;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
     }
 
     .next-btn:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 6px 20px rgba(132, 250, 176, 0.6);
+      transform: translateY(-4px) scale(1.05);
+      box-shadow: 0 10px 30px rgba(0, 230, 118, 0.7);
     }
 
     .message {
       text-align: center;
-      font-size: 1.5em;
-      font-weight: bold;
+      font-size: 1.8em;
+      font-weight: 900;
       margin-top: 20px;
-      min-height: 40px;
+      min-height: 50px;
       transition: all 0.3s ease;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
     }
 
     .message.correct {
-      color: #48bb78;
+      color: #00E676;
       animation: bounce 0.6s ease;
+      font-size: 2em;
     }
 
     .message.wrong {
-      color: #f56565;
+      color: #FF4757;
       animation: shake 0.5s ease;
+      font-size: 1.8em;
     }
 
     @keyframes bounce {
@@ -489,7 +624,7 @@
       document.getElementById('game-title').textContent = config.game_title || defaultConfig.game_title;
       document.getElementById('next-btn').textContent = config.next_button_text || defaultConfig.next_button_text;
       
-      document.body.style.background = `linear-gradient(135deg, ${config.background_color || defaultConfig.background_color} 0%, ${config.secondary_color || defaultConfig.secondary_color} 100%)`;
+      document.body.style.background = `linear-gradient(135deg, ${config.background_color || defaultConfig.background_color} 0%, ${config.secondary_color || defaultConfig.secondary_color} 50%, #C44569 100%)`;
     }
 
     if (window.elementSdk) {
@@ -539,5 +674,5 @@
 
     loadNewWord();
   </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9a1050d3e048a5cf',t:'MTc2MzU2MTY4NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9a105c22d5474088',t:'MTc2MzU2MjE0OC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
